vim and tmux configs...

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,23 +5,84 @@
 #  \__|_| |_| |_|\__,_/_/\_\
 # 
 
+
+
 # Send the same command to all panes/windows/sessions
 bind E command-prompt -p "Command:" \
        "run \"tmux list-panes -a -F '##{session_name}:##{window_index}.##{pane_index}' \
               | xargs -I PANE tmux send-keys -t PANE '%1' Enter\""
 
 
+#################################################################################
 ##### settings
+#################################################################################
 
-set-option -sg escape-time 10
+set-option -sg escape-time 1
 set -g default-terminal "tmux-256color"
+set -g status-keys vi
+set -g mode-keys vi
 setw -g mouse on
 
+# Renumber windows when one of them is closed
+set-option -g renumber-windows on
+# Renumber sessions
+set-hook -g session-created "run ~/bin/renumber-sessions"
+set-hook -g session-closed  "run ~/bin/renumber-sessions"
+
+
+#################################################################################
+##### key mappings
+#################################################################################
+
+bind-key R source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
+
+bind-key -n M-P swap-window -t -1\; select-window -t -1
+bind-key -n M-N swap-window -t +1\; select-window -t +1
+bind-key -n M-p select-window -t -1
+bind-key -n M-n select-window -t +1
+
+bind-key -n M-'"' split-window -h
+bind-key -n M-% split-window -v
+
+# Smart pane switching with awareness of vim splits (with vim-plugin)
+bind -n C-k run-shell 'tmux-vim-select-pane -U'
+bind -n C-j run-shell 'tmux-vim-select-pane -D'
+bind -n C-h run-shell 'tmux-vim-select-pane -L'
+bind -n C-l run-shell 'tmux-vim-select-pane -R'
+bind -n "C-\\" run-shell 'tmux-vim-select-pane -l'
+
+bind-key -n M-C-j resize-pane -D
+bind-key -n M-C-k resize-pane -U
+bind-key -n M-C-h resize-pane -L
+bind-key -n M-C-l resize-pane -R
+
+bind-key -n M-x confirm kill-pane
+bind-key -n M-X confirm kill-window
+bind-key -n M-C-x confirm kill-session
+bind-key -n M-S choose-tree
+
+
+#################################################################################
 ##### theme
+#################################################################################
+
+# screensaver
+set-option -g lock-after-time 300
+set-option -g lock-command "/usr/bin/cmatrix -C blue"
+
+# right prompt
+set -g status-right "#{prefix_highlight} #[fg=yellow]%H:%M #[fg=white]#{@main_separator} #[fg=green]%d-%b-%y "
+
+
 #source-file "${HOME}/.config/tmux/base16.tmuxtheme"
 set -g @plugin 'jatap/tmux-base16-statusline'
+#################################################################################
+##### plugins
+#################################################################################
 
-# prefix highligt options
+# prefix highligt plugin
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+
 set -g @prefix_highlight_fg black
 set -g @prefix_highlight_bg red
 set -g @prefix_highlight_prefix_prompt ' '
@@ -31,20 +92,18 @@ set -g @prefix_highlight_copy_mode_attr "bg=red,fg=black,bold"
 set -g @prefix_highlight_output_prefix ''
 set -g @prefix_highlight_output_suffix ''
 
-# right prompt
-set -g status-right "#{prefix_highlight} #[fg=yellow]%H:%M #[fg=white]#{@main_separator} #[fg=green]%d-%b-%y "
+# sidebar-plugin
+set -g @plugin 'tmux-plugins/tmux-sidebar'
+set -g @sidebar-tree-command 'tree -C'
 
-##### pluginmanager
+# other plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-urlview'
 set -g @plugin 'jbnicolai/tmux-fpp'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
-set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
-
-set -g @plugin 'tmux-plugins/tmux-sidebar'
-set -g @sidebar-tree-command 'tree -C'
-
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
+# restore clear-screen keys C-l
+bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "send-keys C-l"
