--- a/.tmux.conf
+++ b/.tmux.conf
@@ -44,12 +44,23 @@ bind-key -n M-n select-window -t +1
 bind-key -n M-'"' split-window -h
 bind-key -n M-% split-window -v
 
-# Smart pane switching with awareness of vim splits (with vim-plugin)
-bind -n C-k run-shell 'tmux-vim-select-pane -U'
-bind -n C-j run-shell 'tmux-vim-select-pane -D'
-bind -n C-h run-shell 'tmux-vim-select-pane -L'
-bind -n C-l run-shell 'tmux-vim-select-pane -R'
-bind -n "C-\\" run-shell 'tmux-vim-select-pane -l'
+# vim-tmux-navigation (vim-plugin)
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+bind-key -n 'M-h' if-shell "$is_vim" 'send-keys C-h'  'select-pane -L'
+bind-key -n 'M-j' if-shell "$is_vim" 'send-keys C-j'  'select-pane -D'
+bind-key -n 'M-k' if-shell "$is_vim" 'send-keys C-k'  'select-pane -U'
+bind-key -n 'M-l' if-shell "$is_vim" 'send-keys C-l'  'select-pane -R'
+tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
+if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
+    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\'  'select-pane -l'"
+if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
+    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\\\'  'select-pane -l'"
+bind-key -T copy-mode-vi 'M-h' select-pane -L
+bind-key -T copy-mode-vi 'M-j' select-pane -D
+bind-key -T copy-mode-vi 'M-k' select-pane -U
+bind-key -T copy-mode-vi 'M-l' select-pane -R
+bind-key -T copy-mode-vi 'M-\' select-pane -l
 
 bind-key -n M-C-j resize-pane -D
 bind-key -n M-C-k resize-pane -U
@@ -105,5 +116,3 @@ set -g @plugin 'tmux-plugins/tmux-pain-control'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
-# restore clear-screen keys C-l
-bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "send-keys C-l"
