add bashrc_tmux, vim-devicons-plugin, changed tmux keys

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -67,9 +67,9 @@ bind-key -n M-C-k resize-pane -U
 bind-key -n M-C-h resize-pane -L
 bind-key -n M-C-l resize-pane -R
 
-bind-key -n M-x confirm kill-pane
-bind-key -n M-X confirm kill-window
-bind-key -n M-C-x confirm kill-session
+bind-key -n M-q confirm kill-pane
+bind-key -n M-Q confirm kill-window
+bind-key -n M-C-q confirm kill-session
 bind-key -n M-S choose-tree
 
 
