moved tmux theme

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,6 +6,9 @@
 # 
 
 
+#################################################################################
+##### functions
+#################################################################################
 
 # Send the same command to all panes/windows/sessions
 bind E command-prompt -p "Command:" \
@@ -44,6 +47,16 @@ bind-key -n M-n select-window -t +1
 bind-key -n M-'"' split-window -h
 bind-key -n M-% split-window -v
 
+bind-key -n M-C-j resize-pane -D
+bind-key -n M-C-k resize-pane -U
+bind-key -n M-C-h resize-pane -L
+bind-key -n M-C-l resize-pane -R
+
+bind-key -n M-q confirm kill-pane
+bind-key -n M-Q confirm kill-window
+bind-key -n M-C-q confirm kill-session
+bind-key -n M-S choose-tree
+
 # vim-tmux-navigation (vim-plugin)
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
@@ -62,16 +75,6 @@ bind-key -T copy-mode-vi 'M-k' select-pane -U
 bind-key -T copy-mode-vi 'M-l' select-pane -R
 bind-key -T copy-mode-vi 'M-\' select-pane -l
 
-bind-key -n M-C-j resize-pane -D
-bind-key -n M-C-k resize-pane -U
-bind-key -n M-C-h resize-pane -L
-bind-key -n M-C-l resize-pane -R
-
-bind-key -n M-q confirm kill-pane
-bind-key -n M-Q confirm kill-window
-bind-key -n M-C-q confirm kill-session
-bind-key -n M-S choose-tree
-
 
 #################################################################################
 ##### theme
@@ -81,12 +84,10 @@ bind-key -n M-S choose-tree
 set-option -g lock-after-time 300
 set-option -g lock-command "/usr/bin/cmatrix -C blue"
 
-# right prompt
-set -g status-right "#{prefix_highlight} #[fg=yellow]%H:%M #[fg=white]#{@main_separator} #[fg=green]%d-%b-%y "
+source-file "${HOME}/.tmux/base16.tmuxtheme"
 
-
-#source-file "${HOME}/.config/tmux/base16.tmuxtheme"
-set -g @plugin 'jatap/tmux-base16-statusline'
+#set -g @plugin 'jatap/tmux-base16-statusline'
+#set -g status-right "#{prefix_highlight} #[fg=yellow]%H:%M #[fg=white]#{@main_separator} #[fg=green]%d-%b-%y "
 #################################################################################
 ##### plugins
 #################################################################################
@@ -94,12 +95,16 @@ set -g @plugin 'jatap/tmux-base16-statusline'
 # prefix highligt plugin
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 
-set -g @prefix_highlight_fg black
-set -g @prefix_highlight_bg red
-set -g @prefix_highlight_prefix_prompt ' '
+set -g @prefix_highlight_show_sync_mode 'on'
 set -g @prefix_highlight_show_copy_mode 'on'
+set -g @prefix_highlight_fg 'black'
+set -g @prefix_highlight_bg 'green'
+set -g @prefix_highlight_prefix_prompt 'λ '
+set -g @prefix_highlight_sync_prompt ' '
 set -g @prefix_highlight_copy_prompt ' '
-set -g @prefix_highlight_copy_mode_attr "bg=red,fg=black,bold"
+set -g @prefix_highlight_sync_mode_attr "bg=red,fg=black,bold"
+set -g @prefix_highlight_prefix_mode_attr "bg=yellow,fg=black,bold"
+set -g @prefix_highlight_copy_mode_attr "bg=magenta,fg=black,bold"
 set -g @prefix_highlight_output_prefix ''
 set -g @prefix_highlight_output_suffix ''
 
