tmux, vim, dwm settings

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -77,17 +77,21 @@ bind-key -T copy-mode-vi 'M-\' select-pane -l
 
 
 #################################################################################
-##### theme
+##### appearance
 #################################################################################
 
 # screensaver
 set-option -g lock-after-time 300
 set-option -g lock-command "/usr/bin/cmatrix -C blue"
 
-source-file "${HOME}/.tmux/base16.tmuxtheme"
+#theme
+source-file /home/philipp/.tmux/themes/base16-colors
+source-file "${HOME}/.tmux/themes/base16.tmuxtheme"
 
 #set -g @plugin 'jatap/tmux-base16-statusline'
 #set -g status-right "#{prefix_highlight} #[fg=yellow]%H:%M #[fg=white]#{@main_separator} #[fg=green]%d-%b-%y "
+
+
 #################################################################################
 ##### plugins
 #################################################################################
