--- a/.tmux.conf
+++ b/.tmux.conf
@@ -27,6 +27,8 @@ set -g status-keys vi
 set -g mode-keys vi
 setw -g mouse on
 setw -g aggressive-resize on
+set-option -g set-titles on
+set-option -g set-titles-string "[#S] #W"
 
 
 # Renumber sessions
