--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,6 +1,6 @@
 [Settings]
-gtk-theme-name=gruvbox-dark-hard
-gtk-icon-theme-name=gruvbox-dark-hard
+gtk-theme-name=nikes
+gtk-icon-theme-name=nikes
 gtk-font-name=InconsolataLGC Nerd Font Mono Medium 11
 gtk-cursor-theme-name=Adwaita
 gtk-cursor-theme-size=0
