--- a/.tmux.conf
+++ b/.tmux.conf
@@ -28,8 +28,9 @@ set -g mode-keys vi
 setw -g mouse on
 setw -g aggressive-resize on
 set-option -g set-titles on
-set-option -g set-titles-string "[#S] #W"
-
+set-option -g set-titles-string "[#S] #{b:pane_current_path}" # #W for window-name
+set-option -g status-interval 3
+set-option -g automatic-rename on
 
 # Renumber sessions
 set-hook -g session-created "run ~/bin/renumber-sessions"
@@ -38,6 +39,8 @@ set-hook -g session-closed  "run ~/bin/renumber-sessions"
 # Renumber windows when one of them is closed
 set-option -g renumber-windows on
 
+# for the vim-clipboard-to-tmux plugin
+set -g focus-events on
 
 #################################################################################
 ##### key mappings
