addet onboard base16-theme, minor stuff

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -46,6 +46,7 @@ set -g focus-events on
 ##### key mappings
 #################################################################################
 
+bind-key -n C-F3 set-option -g status #Ctrl+F3 Combo
 bind-key R source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
 
 bind-key -n M-P swap-window -t -1\; select-window -t -1
