--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,12 +21,19 @@ bind E command-prompt -p "Command:" \
 #################################################################################
 
 set -g default-shell /bin/zsh
+
+set -g visual-bell on
+set -g bell-action any
+set -g display-time 0
+set-hook -g alert-bell 'set -g display-time 50 ; display-message "" ; set -g display-time 0'
+
 set-option -sg escape-time 1
 set -g default-terminal "tmux-256color"
 set -g status-keys vi
 set -g mode-keys vi
 setw -g mouse on
 setw -g aggressive-resize on
+
 set-option -g set-titles on
 set-option -g set-titles-string "[#S] #{b:pane_current_path}" # #W for window-name
 set-option -g status-interval 3
@@ -46,7 +53,8 @@ set -g focus-events on
 ##### key mappings
 #################################################################################
 
-bind-key -n C-F3 set-option -g status #Ctrl+F3 Combo
+bind-key -n C-F4 set-option -g status off \; set-option -g pane-border-status off #Ctrl+F3 Combo
+bind-key -n C-F3 set-option -g pane-border-status bottom \; set-option -g status on #Ctrl+F4 Combo
 bind-key R source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
 
 bind-key -n M-P swap-window -t -1\; select-window -t -1
