--- a/.tmux.conf
+++ b/.tmux.conf
@@ -22,6 +22,9 @@ bind E command-prompt -p "Command:" \
 
 set -g default-shell /bin/zsh
 
+bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -i -f -selection primary | xclip -i -selection clipboard"
+bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -in -selection clipboard"
+
 set -g visual-bell on
 set -g bell-action current
 set -g display-time 0
