--- a/.tmux.conf
+++ b/.tmux.conf
@@ -111,6 +111,9 @@ bind-key -T copy-mode-vi 'M-\' select-pane -l
 #theme
 source-file "${HOME}/.tmux/themes/base16.tmuxtheme"
 
+# default off... can be toggled on..
+set -g status off
+set -g pane-border-status off
 
 #################################################################################
 ##### plugins
