tmux topbar-theme

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -22,6 +22,10 @@ bind E command-prompt -p "Command:" \
 
 set -g default-shell /bin/zsh
 
+# default off... can be toggled on..
+#set -g status off
+#set -g pane-border-status off
+
 bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -i -f -selection primary | xclip -i -selection clipboard"
 bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -in -selection clipboard"
 
@@ -30,24 +34,24 @@ set -g bell-action current
 set -g display-time 0
 set-hook -g alert-bell 'set -g display-time 50 ; display-message "" ; set -g display-time 0'
 
-set-option -sg escape-time 1
+set -sg escape-time 1
 set -g default-terminal "tmux-256color"
 set -g status-keys vi
 set -g mode-keys vi
 setw -g mouse on
 setw -g aggressive-resize on
 
-set-option -g set-titles on
-set-option -g set-titles-string "[#S] #{b:pane_current_path}" # #W for window-name
-set-option -g status-interval 3
-set-option -g automatic-rename on
+set -g set-titles on
+set -g set-titles-string "[#S] #{b:pane_current_path}" # #W for window-name
+set -g status-interval 3
+set -g automatic-rename on
 
 # Renumber sessions
 set-hook -g session-created "run ~/bin/renumber-sessions"
 set-hook -g session-closed  "run ~/bin/renumber-sessions"
 
 # Renumber windows when one of them is closed
-set-option -g renumber-windows on
+set -g renumber-windows on
 
 # for the vim-clipboard-to-tmux plugin
 set -g focus-events on
@@ -59,8 +63,8 @@ unbind C-b
 set -g prefix M-Space
 bind Space send-prefix
 
-bind-key -n C-F4 set-option -g status off \; set-option -g pane-border-status off #Ctrl+F3 Combo
-bind-key -n C-F3 set-option -g pane-border-status bottom \; set-option -g status on #Ctrl+F4 Combo
+bind-key -n C-F4 set -g status off \; set -g pane-border-status off #Ctrl+F3 Combo
+bind-key -n C-F3 set -g pane-border-status bottom \; set -g status on #Ctrl+F4 Combo
 bind-key R source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
 
 bind-key -n M-P swap-window -t -1\; select-window -t -1
@@ -101,39 +105,11 @@ bind-key -T copy-mode-vi 'M-\' select-pane -l
 
 
 #################################################################################
-##### appearance
-#################################################################################
-
-# screensaver
-#set-option -g lock-after-time 800
-#set-option -g lock-command "/usr/bin/cmatrix -s -C blue"
-
-#theme
-source-file "${HOME}/.tmux/themes/base16.tmuxtheme"
-
-# default off... can be toggled on..
-set -g status off
-set -g pane-border-status off
-
-#################################################################################
 ##### plugins
 #################################################################################
 
 # prefix highligt plugin
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
-
-set -g @prefix_highlight_show_sync_mode 'on'
-set -g @prefix_highlight_show_copy_mode 'on'
-set -g @prefix_highlight_fg 'black'
-set -g @prefix_highlight_bg 'green'
-set -g @prefix_highlight_prefix_prompt 'λ '
-set -g @prefix_highlight_sync_prompt ' '
-set -g @prefix_highlight_copy_prompt ' '
-set -g @prefix_highlight_sync_mode_attr "bg=red,fg=black,bold"
-set -g @prefix_highlight_prefix_mode_attr "bg=yellow,fg=black,bold"
-set -g @prefix_highlight_copy_mode_attr "bg=magenta,fg=black,bold"
-set -g @prefix_highlight_output_prefix ''
-set -g @prefix_highlight_output_suffix ''
 
 # sidebar-plugin
 set -g @plugin 'tmux-plugins/tmux-sidebar'
@@ -146,5 +122,30 @@ set -g @plugin 'tmux-plugins/tmux-urlview'
 set -g @plugin 'jbnicolai/tmux-fpp'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
 
+
+#################################################################################
+##### appearance
+#################################################################################
+
+# 24 hour clock
+setw -g clock-mode-style 24
+
+# Status update interval
+set -g status-interval 1
+
+# starting index
+set -g base-index 1
+set -g pane-base-index 1
+
+# screensaver
+#set -g lock-after-time 800
+#set -g lock-command "/usr/bin/cmatrix -s -C blue"
+
+#theme
+#source-file "${HOME}/.tmux/themes/base16.tmuxtheme"
+source-file "${HOME}/.tmux/themes/topbar.tmuxtheme"
+
+
+#################################################################################
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
