--- a/.tmux.conf
+++ b/.tmux.conf
@@ -25,6 +25,7 @@ set -g default-shell /bin/zsh
 # default off... can be toggled on..
 #set -g status off
 #set -g pane-border-status off
+#set -g pane-border-status bottom
 
 bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -i -f -selection primary | xclip -i -selection clipboard"
 bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -in -selection clipboard"
