--- a/.tmux.conf
+++ b/.tmux.conf
@@ -49,7 +49,7 @@ set -g automatic-rename on
 
 # Renumber sessions
 set-hook -g session-created "run ~/bin/renumber-sessions"
-set-hook -g session-closed  "run ~/bin/renumber-sessions"
+set-hook -g session-closed "run ~/bin/renumber-sessions"
 
 # Renumber windows when one of them is closed
 set -g renumber-windows on
@@ -81,7 +81,7 @@ bind-key -n M-C-k resize-pane -U
 bind-key -n M-C-h resize-pane -L
 bind-key -n M-C-l resize-pane -R
 
-bind-key -n M-q confirm kill-pane
+bind-key -n M-q kill-pane
 bind-key -n M-Q confirm kill-window
 bind-key -n M-C-q confirm kill-session
 bind-key -n M-S choose-tree
