--- a/.tmux.conf
+++ b/.tmux.conf
@@ -81,8 +81,8 @@ bind-key -n M-C-k resize-pane -U
 bind-key -n M-C-h resize-pane -L
 bind-key -n M-C-l resize-pane -R
 
-bind-key -n M-q kill-pane
-bind-key -n M-Q confirm kill-window
+bind-key -n M-q confirm kill-pane
+bind-key -n M-Q run-shell "tmux kill-window && xsetroot -name 'fsignal:3'"
 bind-key -n M-C-q confirm kill-session
 bind-key -n M-S choose-tree
 
