--- a/.config/qutebrowser/autoconfig.yml
+++ b/.config/qutebrowser/autoconfig.yml
@@ -17,6 +17,7 @@ settings:
   content.notifications:
     https://3.solo6.biz: true
     https://awesometoptreats.com: false
+    https://www.hackintosh-forum.de: false
     https://www.reddit.com: false
   content.register_protocol_handler:
     https://mail.google.com?extsrc=mailto&url=%25s: true
