tmux focus events

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -49,18 +49,18 @@ set -g automatic-rename on
 # Status update interval
 set -g status-interval 3
 
+# for the vim-clipboard-to-tmux plugin
+set -g focus-events on
+
+# change statuscolor on focus-event
+set-option -g pane-focus-in "run ~/bin/focus-sessions"
+
 # Renumber sessions
 set-hook -g session-created "run ~/bin/renumber-sessions"
 set-hook -g session-closed "run ~/bin/renumber-sessions"
 
-set-option -g pane-focus-in "set-option status-style bg=Colour04"
-set-option -g pane-focus-out "set-option status-style bg=Colour10"
-
 # Renumber windows when one of them is closed
 set -g renumber-windows on
-
-# for the vim-clipboard-to-tmux plugin
-set -g focus-events on
 
 #################################################################################
 ##### key mappings
