tmux focus-events v2

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -53,7 +53,8 @@ set -g status-interval 3
 set -g focus-events on
 
 # change statuscolor on focus-event
-set-option -g pane-focus-in "run ~/bin/focus-sessions"
+set-option -g pane-focus-out "set-option status-style bg=Colour08"
+set-option -g pane-focus-in "run 'tmux set-option status-style bg=Colour04'" # "run" is a hack to get it working...
 
 # Renumber sessions
 set-hook -g session-created "run ~/bin/renumber-sessions"
