add lunarvim config-file

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -17,6 +17,30 @@ bind E command-prompt -p "Command:" \
 
 
 #################################################################################
+##### plugins
+#################################################################################
+
+# plugin-manager-settings
+set -g @plugin 'tmux-plugins/tpm'
+
+# tmux-vim-navigator (with vim plugin...)
+set -g @plugin 'christoomey/vim-tmux-navigator'
+
+# prefix highligt plugin
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+
+# sidebar-plugin
+set -g @plugin 'tmux-plugins/tmux-sidebar'
+set -g @sidebar-tree-command 'tree -C'
+
+# other plugins
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-urlview'
+set -g @plugin 'jbnicolai/tmux-fpp'
+set -g @plugin 'tmux-plugins/tmux-pain-control'
+
+
+#################################################################################
 ##### settings
 #################################################################################
 
@@ -67,6 +91,7 @@ set -g default-terminal "tmux-256color"
 set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
 set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours
 
+
 #################################################################################
 ##### key mappings
 #################################################################################
@@ -96,27 +121,6 @@ bind-key -n M-Q run-shell "tmux kill-window && xsetroot -name 'fsignal:3'"
 bind-key -n M-C-q confirm kill-session
 bind-key -n M-S choose-tree
 
-#################################################################################
-##### plugins
-#################################################################################
-
-# tmux-vim-navigator (with vim plugin...)
-set -g @plugin 'christoomey/vim-tmux-navigator'
-
-# prefix highligt plugin
-set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
-
-# sidebar-plugin
-set -g @plugin 'tmux-plugins/tmux-sidebar'
-set -g @sidebar-tree-command 'tree -C'
-
-# other plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-urlview'
-set -g @plugin 'jbnicolai/tmux-fpp'
-set -g @plugin 'tmux-plugins/tmux-pain-control'
-
 
 #################################################################################
 ##### appearance
@@ -142,6 +146,9 @@ source-file "${HOME}/.config/tmux/themes/dotbar.tmuxtheme"
 
 # toggle bar
 bind-key -n C-F3 set-option -g status #Ctrl+F3 Combo
+
+
+
 
 #################################################################################
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
