--- a/.xfiles/themes/colordef.rc
+++ b/.xfiles/themes/colordef.rc
@@ -1,32 +1,32 @@
-base00:#10080e
-base01:#322b30
-base02:#544f53
-base03:#767275
-base04:#999598
-base05:#bbb8ba
-base06:#dddcdd
+base00:#070f19
+base01:#2a313a
+base02:#4e545b
+base03:#71767c
+base04:#95989c
+base05:#b8babd
+base06:#dcddde
 base07:#ffffff
-base08:#c5a7a4
-base09:#d4baac
-base0A:#dacec3
-base0B:#b4c3d8
-base0C:#8291cc
-base0D:#d7d3de
-base0E:#c5adc2
-base0F:#c7889d
-base08a:#961947
-base09a:#8d4e3b
-base0Aa:#a46236
-base0Ba:#4776ab
-base0Ca:#7787a9
-base0Da:#574e8d
-base0Ea:#9a8ba6
-base0Fa:#8b4d81
-base0Ddarker:#756e82
-base0Ddarkera:#665F73
-base0Ddarkeraa:#575064
-base0Ddarkeraaa:#3E374B
-base0Bgrey:#9faabe
-base0Bgreya:#8e98ac
-base0Bgreyaa:#7d879a
-base0Bgreyaaa:#6b7488
+base08:#abc5ad
+base09:#b6bec5
+base0A:#97afc6
+base0B:#9798c4
+base0C:#c7c1d3
+base0D:#b284cc
+base0E:#d3c0d8
+base0F:#ddd1da
+base08a:#628e67
+base09a:#6f858d
+base0Aa:#40698d
+base0Ba:#4f528d
+base0Ca:#84769f
+base0Da:#733e92
+base0Ea:#9d71a7
+base0Fa:#a688a0
+base0Ddarker:#705c84
+base0Ddarkera:#614D75
+base0Ddarkeraa:#523E66
+base0Ddarkeraaa:#39254D
+base0Bgrey:#9696b3
+base0Bgreya:#8586a2
+base0Bgreyaa:#737592
+base0Bgreyaaa:#616481
