test2 new repo-name

--- a/.xfiles/themes/colordef.rc
+++ b/.xfiles/themes/colordef.rc
@@ -1,32 +1,32 @@
-base00:#10080e
-base01:#322b30
-base02:#544f53
-base03:#767275
-base04:#999598
-base05:#bbb8ba
-base06:#dddcdd
+base00:#081439
+base01:#2b3655
+base02:#4f5772
+base03:#72798e
+base04:#959aaa
+base05:#b8bcc6
+base06:#dcdde3
 base07:#ffffff
-base08:#c5a7a4
-base09:#d4baac
-base0A:#dacec3
-base0B:#9bb4d6
-base0C:#8190cb
-base0D:#d7d3de
-base0E:#c5adc2
-base0F:#c7889e
-base08a:#8e625a
-base09a:#aa7457
-base0Aa:#a98e74
-base0Ba:#4672ab
-base0Ca:#3c4d91
-base0Da:#6b598f
-base0Ea:#8e658b
-base0Fa:#8d435d
-base0Ddarker:#797183
-base0Ddarkera:#6A6274
-base0Ddarkeraa:#5B5365
-base0Ddarkeraaa:#423A4C
-base0Bgrey:#99a5bd
-base0Bgreya:#8894ac
-base0Bgreyaa:#77829a
-base0Bgreyaaa:#657088
+base08:#9f9b81
+base09:#7caeae
+base0A:#9bafc2
+base0B:#6074b0
+base0C:#c1bacf
+base0D:#c4adce
+base0E:#9f72a9
+base0F:#ac82a9
+base08a:#5b5845
+base09a:#416969
+base0Aa:#546f8a
+base0Ba:#303c61
+base0Ca:#7e6f9b
+base0Da:#8a5e9e
+base0Ea:#5a3b61
+base0Fa:#694666
+base0Ddarker:#7a6e93
+base0Ddarkera:#6B5F84
+base0Ddarkeraa:#5C5075
+base0Ddarkeraaa:#43375C
+base0Bgrey:#8088a6
+base0Bgreya:#6f7899
+base0Bgreyaa:#5e688b
+base0Bgreyaaa:#4c577c
