--- a/.xfiles/themes/colordef.rc
+++ b/.xfiles/themes/colordef.rc
@@ -1,32 +1,32 @@
-base00:#081439
-base01:#2b3655
-base02:#4f5772
-base03:#72798e
-base04:#959aaa
-base05:#b8bcc6
-base06:#dcdde3
+base00:#120935
+base01:#342c52
+base02:#564f6f
+base03:#78728c
+base04:#9996a8
+base05:#bbb9c5
+base06:#dddce2
 base07:#ffffff
-base08:#9f9b81
-base09:#7caeae
-base0A:#9bafc2
-base0B:#6074b0
-base0C:#c1bacf
-base0D:#c4adce
-base0E:#9f72a9
-base0F:#ac82a9
-base08a:#5b5845
-base09a:#416969
-base0Aa:#546f8a
-base0Ba:#303c61
-base0Ca:#7e6f9b
-base0Da:#8a5e9e
-base0Ea:#5a3b61
-base0Fa:#694666
-base0Ddarker:#7a6e93
-base0Ddarkera:#6B5F84
-base0Ddarkeraa:#5C5075
-base0Ddarkeraaa:#43375C
-base0Bgrey:#8088a6
-base0Bgreya:#6f7899
-base0Bgreyaa:#5e688b
-base0Bgreyaaa:#4c577c
+base08:#878f69
+base09:#6192bb
+base0A:#7992cd
+base0B:#b2aeca
+base0C:#d7ace9
+base0D:#cbb7d1
+base0E:#b18cad
+base0F:#cda4b5
+base08a:#414533
+base09a:#2f516d
+base0Aa:#365191
+base0Ba:#6a6297
+base0Ca:#a647cf
+base0Da:#93699f
+base0Ea:#714d6d
+base0Fa:#9c5673
+base0Ddarker:#816e93
+base0Ddarkera:#725F84
+base0Ddarkeraa:#635075
+base0Ddarkeraaa:#4A375C
+base0Bgrey:#a5a0bb
+base0Bgreya:#948eac
+base0Bgreyaa:#837c9e
+base0Bgreyaaa:#716a8f
