--- a/.config/tmux/shell/stmux/config
+++ b/.config/tmux/shell/stmux/config
@@ -5,19 +5,23 @@
 
 #### simpler, better (first terminal attaches to unclosed session...)
 if [ -z "$TMUX" ] ;then
-		renumber-sessions
-		tmux new-session -d -s base -n 0 2> /dev/null
-		tmux new-session -d -t base -s 1 2> /dev/null
-		STMUX=$(tmux ls 2> /dev/null | grep '^[1-9]\+:' | wc -l)
-		ATTACH=$(tmux ls 2> /dev/null | grep '^1:' | grep -vm1 attached | wc -l)
-		if [[ "$ATTACH" > "0" ]]; then
-			tmux attach-session -t 1 \; set-option destroy-unattached
-		else
-			((STMUX++))
-			tmux new-session -d -t base -s $STMUX
-		    tmux new-window
-			tmux attach-session -t $STMUX \; set-option destroy-unattached
+	renumber-sessions
+	tmux new-session -d -s base -n 0 2> /dev/null
+	tmux new-session -d -t base -s 1 2> /dev/null
+	STMUX=$(tmux ls 2> /dev/null | grep '^[1-9]\+:' | wc -l)
+	ATTACH=$(tmux ls 2> /dev/null | grep '^1:' | grep -vm1 attached | wc -l)
+	SWALLOW=$(tmux ls 2> /dev/null | grep '^.-sw:' | wc -l)
+	if [[ "$ATTACH" > "0" ]]; then
+		if [[ "$SWALLOW" > "0" ]]; then
+			tmux new-window
 		fi
+		tmux attach-session -t 1 \; set-option destroy-unattached
+	else
+		((STMUX++))
+		tmux new-session -d -t base -s $STMUX
+		tmux new-window
+		tmux attach-session -t $STMUX \; set-option destroy-unattached
+	fi
 fi
 
 
@@ -32,15 +36,15 @@ fi
 #	if [[ -z "$ID" ]] ;then # if not available create a new one
 #	    ((STMUX++))
 #		tmux new-session -d -t 0 -s $STMUX
-#	    tmux new-window
+#		tmux new-window
 #		tmux kill-window -t 0:base 2> /dev/null
 ##		if [[ "$STMUX" == "1" ]]; then
-##	    	tmux attach-session -t $STMUX \; send-keys -t 1 "cbonsai -pl" C-m \; set-option destroy-unattached
+##	    		tmux attach-session -t $STMUX \; send-keys -t 1 "cbonsai -pl" C-m \; set-option destroy-unattached
 ##		else
 #			tmux attach-session -t $STMUX \; set-option destroy-unattached
 ##		fi
 #	else
-#	    tmux attach-session -t $ID \; set-option destroy-unattached
+#		tmux attach-session -t $ID \; set-option destroy-unattached
 #	fi
 #fi
 
