--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -82,6 +82,7 @@ set -g focus-events on
 # Renumber sessions
 set-hook -g session-created "run ~/.local/bin/renumber-sessions"
 set-hook -g session-closed "run ~/.local/bin/renumber-sessions"
+set-hook -g session-renamed "run ~/.local/bin/renumber-sessions" # for swallow-script
 
 # Renumber windows when one of them is closed
 set -g renumber-windows on
