--- a/.config/tmux/shell/scratchpad/config
+++ b/.config/tmux/shell/scratchpad/config
@@ -3,7 +3,10 @@
 ####################################################
 
 #### atostart tmux with sessions in windows (arch-wiki)
+SCRATCH=$(tmux ls 2> /dev/null | grep "scratchpad" | wc -l)
+if [[ "$SCRATCH" == "0" ]]; then
     tmux new-session -d -s scratchpad 2> /dev/null
+else
     if [[ -z "$TMUX" ]] ;then
     	ID="$( tmux ls 2> /dev/null | grep "scratchpad" | grep -vm1 attached | cut -d: -f1 )" # get the id of a deattached session
     	if [[ "$ID" != "scratchpad" ]] ;then # if not available create a new one
@@ -14,6 +17,7 @@
     	fi
     fi
 fi
+
 
 ####################################################
 ##### alternative fallback-theme (systemd-problem..)
