--- a/.config/tmux/shell/stmux/config
+++ b/.config/tmux/shell/stmux/config
@@ -5,12 +5,11 @@
 
 #### simpler, better (first terminal attaches to unclosed session...)
 if [ -z "$TMUX" ] ;then
-	renumber-sessions
 	tmux new-session -d -s base -n 0 2> /dev/null
 	tmux new-session -d -t base -s 1 2> /dev/null
 	STMUX=$(tmux ls 2> /dev/null | grep '^[1-9]\+:' | wc -l)
 	ATTACH=$(tmux ls 2> /dev/null | grep '^1:' | grep -vm1 attached | wc -l)
-	SWALLOW=$(tmux ls 2> /dev/null | grep '^.-sw:' | wc -l)
+	SWALLOW=$(tmux ls 2> /dev/null | grep '^sw\-[1-9]' | wc -l)
 	if [[ "$ATTACH" > "0" ]]; then
 		if [[ "$SWALLOW" > "0" ]]; then
 			tmux new-window
