--- a/.xfiles/themes/colordef.rc
+++ b/.xfiles/themes/colordef.rc
@@ -1,34 +1,34 @@
 gtk-color-scheme =
-"base00:#1d2021
-base01:#3c3836
-base02:#504945
-base03:#665c54
-base04:#bdae93
-base05:#d5c4a1
-base06:#ebdbb2
-base07:#fbf1c7
-base08:#fb4934
-base09:#fe8019
-base0A:#fabd2f
-base0B:#b8bb26
-base0C:#8ec07c
-base0D:#83a598
-base0E:#d3869b
-base0F:#d65d0e
-base08a:#DB2914
-base09a:#DE6000
-base0Aa:#DA9D0F
-base0Ba:#989B06
-base0Ca:#6EA05C
-base0Da:#638578
-base0Ea:#B3667B
-base0Fa:#B63D00
-base0Ddarker:#626e66
-base0Ddarkera:#535F57
-base0Ddarkeraa:#445048
-base0Ddarkeraaa:#2B372F
-base0Bgrey:#c0b765
-base0Bgreya:#b5ac5e
-base0Bgreyaa:#888240
-base0Bgreyaaa:#7d7939
+"base00:#282c34
+base01:#353b45
+base02:#3e4451
+base03:#545862
+base04:#565c64
+base05:#abb2bf
+base06:#b6bdca
+base07:#c8ccd4
+base08:#e06c75
+base09:#d19a66
+base0A:#e5c07b
+base0B:#98c379
+base0C:#56b6c2
+base0D:#61afef
+base0E:#c678dd
+base0F:#be5046
+base08a:#C04C55
+base09a:#B17A46
+base0Aa:#C5A05B
+base0Ba:#78A359
+base0Ca:#3696A2
+base0Da:#418FCF
+base0Ea:#A658BD
+base0Fa:#9E3026
+base0Ddarker:#4d7095
+base0Ddarkera:#3E6186
+base0Ddarkeraa:#2F5277
+base0Ddarkeraaa:#16395E
+base0Bgrey:#9bb394
+base0Bgreya:#708668
+base0Bgreyaa:#6f8467
+base0Bgreyaaa:#64795e
 "
