--- a/.config/qt5ct/qt5ct.conf
+++ b/.config/qt5ct/qt5ct.conf
@@ -25,7 +25,7 @@ underline_shortcut=1
 wheel_scroll_lines=5
 
 [QSSEditor]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x2\x32\0\0\0l\0\0\x4\xb6\0\0\x2`\0\0\x2\x33\0\0\0m\0\0\x4\xb5\0\0\x2_\0\0\0\0\0\0\0\0\x5V\0\0\x2\x33\0\0\0m\0\0\x4\xb5\0\0\x2_)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x2\x35\0\0\0o\0\0\x4\xb9\0\0\x2\x63\0\0\x2\x36\0\0\0p\0\0\x4\xb8\0\0\x2\x62\0\0\0\0\0\0\0\0\x5V\0\0\x2\x36\0\0\0p\0\0\x4\xb8\0\0\x2\x62)
 
 [SettingsWindow]
 geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\n\0\0\0\x30\0\0\x5K\0\0\x2\xf5\0\0\0\n\0\0\0\x30\0\0\x5K\0\0\x2\xf5\0\0\0\0\0\0\0\0\x5V\0\0\0\n\0\0\0\x30\0\0\x5K\0\0\x2\xf5)
