--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -70,7 +70,7 @@ setw -g aggressive-resize on
 #set-option -ga terminal-overrides ",st-256color:Tc"
 
 set -g set-titles on
-set -g set-titles-string "[#S] #T" # #{b:pane_current_path} for current directory
+set -g set-titles-string "#S - #T" # #{b:pane_current_path} for current directory
 set -g automatic-rename on
 
 # Status update interval
