--- a/.xfiles/themes/colordef.rc
+++ b/.xfiles/themes/colordef.rc
@@ -1,34 +1,34 @@
 gtk-color-scheme =
-"base00:#282c34
-base01:#353b45
-base02:#3e4451
-base03:#545862
-base04:#565c64
-base05:#abb2bf
-base06:#b6bdca
-base07:#c8ccd4
-base08:#e06c75
-base09:#d19a66
-base0A:#e5c07b
-base0B:#98c379
-base0C:#56b6c2
-base0D:#61afef
-base0E:#c678dd
-base0F:#be5046
-base08a:#C04C55
-base09a:#B17A46
-base0Aa:#C5A05B
-base0Ba:#78A359
-base0Ca:#3696A2
-base0Da:#418FCF
-base0Ea:#A658BD
-base0Fa:#9E3026
-base0Ddarker:#4d7095
-base0Ddarkera:#3E6186
-base0Ddarkeraa:#2F5277
-base0Ddarkeraaa:#16395E
-base0Bgrey:#9bb394
-base0Bgreya:#708668
-base0Bgreyaa:#6f8467
-base0Bgreyaaa:#64795e
+"base00:#221e34
+base01:#423e51
+base02:#615e6e
+base03:#817e8b
+base04:#a09fa8
+base05:#c0bfc5
+base06:#dfdfe2
+base07:#ffffff
+base08:#878f69
+base09:#6192bb
+base0A:#7992cd
+base0B:#b2aeca
+base0C:#d7ace9
+base0D:#cbb7d1
+base0E:#b18cad
+base0F:#cda4b5
+base08a:#414533
+base09a:#2f516d
+base0Aa:#365191
+base0Ba:#6a6297
+base0Ca:#a647cf
+base0Da:#93699f
+base0Ea:#714d6d
+base0Fa:#9c5673
+base0Ddarker:#877692
+base0Ddarkera:#786783
+base0Ddarkeraa:#695874
+base0Ddarkeraaa:#503F5B
+base0Bgrey:#a7a3bb
+base0Bgreya:#9793ac
+base0Bgreyaa:#88829d
+base0Bgreyaaa:#77728e
 "
