--- a/.xfiles/themes/colordef.rc
+++ b/.xfiles/themes/colordef.rc
@@ -1,34 +1,34 @@
 gtk-color-scheme =
-"base00:#221e34
-base01:#423e51
-base02:#615e6e
-base03:#817e8b
-base04:#a09fa8
-base05:#c0bfc5
-base06:#dfdfe2
-base07:#ffffff
-base08:#878f69
-base09:#6192bb
-base0A:#7992cd
-base0B:#b2aeca
-base0C:#d7ace9
-base0D:#cbb7d1
-base0E:#b18cad
-base0F:#cda4b5
-base08a:#414533
-base09a:#2f516d
-base0Aa:#365191
-base0Ba:#6a6297
-base0Ca:#a647cf
-base0Da:#93699f
-base0Ea:#714d6d
-base0Fa:#9c5673
-base0Ddarker:#877692
-base0Ddarkera:#786783
-base0Ddarkeraa:#695874
-base0Ddarkeraaa:#503F5B
-base0Bgrey:#a7a3bb
-base0Bgreya:#9793ac
-base0Bgreyaa:#88829d
-base0Bgreyaaa:#77728e
+"base00:#001319
+base01:#213237
+base02:#435256
+base03:#647174
+base04:#859193
+base05:#a6b0b1
+base06:#c8d0d0
+base07:#e9efee
+base08:#20a371
+base09:#8aa79d
+base0A:#018975
+base0B:#008484
+base0C:#75a7a8
+base0D:#43818c
+base0E:#3c97b2
+base0F:#a97c8a
+base08a:#375e48
+base09a:#4c665c
+base0Aa:#2e7063
+base0Ba:#217673
+base0Ca:#006a6a
+base0Da:#3a6369
+base0Ea:#3c727a
+base0Fa:#65597e
+base0Ddarker:#426268
+base0Ddarkera:#335359
+base0Ddarkeraa:#24444A
+base0Ddarkeraaa:#0B2B31
+base0Bgrey:#6a9796
+base0Bgreya:#598787
+base0Bgreyaa:#497777
+base0Bgreyaaa:#376768
 "
