--- a/.xfiles/themes/colordef.rc
+++ b/.xfiles/themes/colordef.rc
@@ -1,34 +1,34 @@
 gtk-color-scheme =
-"base00:#001319
-base01:#213237
-base02:#435256
-base03:#647174
-base04:#859193
-base05:#a6b0b1
-base06:#c8d0d0
-base07:#e9efee
-base08:#20a371
-base09:#8aa79d
-base0A:#018975
-base0B:#008484
-base0C:#75a7a8
-base0D:#43818c
-base0E:#3c97b2
-base0F:#a97c8a
-base08a:#375e48
-base09a:#4c665c
-base0Aa:#2e7063
-base0Ba:#217673
-base0Ca:#006a6a
-base0Da:#3a6369
-base0Ea:#3c727a
-base0Fa:#65597e
-base0Ddarker:#426268
-base0Ddarkera:#335359
-base0Ddarkeraa:#24444A
-base0Ddarkeraaa:#0B2B31
-base0Bgrey:#6a9796
-base0Bgreya:#598787
-base0Bgreyaa:#497777
-base0Bgreyaaa:#376768
+"base00:#0d1820
+base01:#303940
+base02:#525a60
+base03:#757b80
+base04:#979c9f
+base05:#babdbf
+base06:#dcdedf
+base07:#ffffff
+base08:#b29b9b
+base09:#6fb2c8
+base0A:#58b1ce
+base0B:#82a5b4
+base0C:#6da4bd
+base0D:#80b3ca
+base0E:#99b3c4
+base0F:#a0a0b2
+base08a:#91746f
+base09a:#4090ab
+base0Aa:#318caa
+base0Ba:#748691
+base0Ca:#587f92
+base0Da:#56859d
+base0Ea:#3c738f
+base0Fa:#61788f
+base0Ddarker:#607a88
+base0Ddarkera:#516B79
+base0Ddarkeraa:#425C6A
+base0Ddarkeraaa:#294351
+base0Bgrey:#9ba9b0
+base0Bgreya:#8999a1
+base0Bgreyaa:#788891
+base0Bgreyaaa:#667780
 "
