--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -3,3 +3,5 @@ ytdl-format=bestvideo[height<=?768][fps<=?30][vcodec!=?vp9]+bestaudio/best
 
 # Disable the On Screen Controller (OSC).
 osc=no
+osd-font='monospace'
+osd-font-size=16
