--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -118,7 +118,7 @@ bind-key -n M-C-h resize-pane -L
 bind-key -n M-C-l resize-pane -R
 
 bind-key -n M-q confirm kill-pane
-bind-key -n M-Q run-shell "tmux kill-window && xsetroot -name 'fsignal:3'"
+bind-key -n M-Q run-shell "tmux kill-window && xsetroot -name 'dwm:cmd kill'"
 bind-key -n M-C-q confirm kill-session
 bind-key -n M-S choose-tree
 
