--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -38,7 +38,8 @@ blur:
 
 blur-background-exclude = [
   "! name~=''",
-  "class_g * = 'dwm'",
+#  "class_g * = 'dwm'",
+  "class_g * = 'dwmsys'",
   "class_g * = 'slop'",
   "_GTK_FRAME_EXTENTS@:c"
 ];
