--- a/minecraft/server.properties
+++ b/minecraft/server.properties
@@ -1,49 +1,50 @@
 #Minecraft server properties
-#Mon Nov 08 13:17:31 CET 2021
+#Tue Nov 09 09:22:30 CET 2021
+enable-jmx-monitoring=false
+rcon.port=25575
+enable-command-block=false
+gamemode=survival
+enable-query=false
+level-name=infinite_onion
+motd=Infinite onion
+query.port=25565
+pvp=true
+difficulty=normal
+network-compression-threshold=512
+max-tick-time=120000
+require-resource-pack=false
+max-players=10
+use-native-transport=true
+online-mode=true
+enable-status=true
+allow-flight=false
 broadcast-rcon-to-ops=true
 view-distance=10
-enable-jmx-monitoring=false
 server-ip=
 resource-pack-prompt=
-rcon.port=25575
-gamemode=survival
-server-port=25565
 allow-nether=true
-enable-command-block=false
+server-port=25565
 enable-rcon=false
 sync-chunk-writes=true
-enable-query=false
 op-permission-level=4
 prevent-proxy-connections=false
 resource-pack=
 entity-broadcast-range-percentage=100
-level-name=world
 rcon.password=
 player-idle-timeout=0
-motd=Lucs Raspberry Pi
-query.port=25565
+debug=false
 force-gamemode=false
 rate-limit=0
 hardcore=false
 white-list=false
 broadcast-console-to-ops=true
-pvp=true
 spawn-npcs=true
 spawn-animals=true
-snooper-enabled=true
-difficulty=easy
+snooper-enabled=false
 function-permission-level=2
-network-compression-threshold=256
 text-filtering-config=
-require-resource-pack=false
 spawn-monsters=true
-max-tick-time=60000
 enforce-whitelist=false
-use-native-transport=true
-max-players=10
 resource-pack-sha1=
-spawn-protection=16
-online-mode=true
-enable-status=true
-allow-flight=false
+spawn-protection=0
 max-world-size=29999984
