--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -2,81 +2,111 @@
 #######################################################
 
 backend = "glx";
-vsync = true;
-
+vsync = true
+mark-wmwin-focused = true;
+mark-ovredir-focused = true;
+detect-rounded-corners = true;
+detect-client-opacity = true;
+refresh-rate = 0;
+detect-transient = true;
+detect-client-leader = true;
 use-damage = false;
-
-glx-no-stencil = true;
-glx-copy-from-front = false;
+#log-level = "info";
 
 wintypes:
 {
-  tooltip = { fade = true; shadow = true; opacity = 1.0; focus = true; full-shadow = false; };
-  dock = { shadow = false; }
-  dnd = { shadow = false; }
-  popup_menu = { opacity = 1.0; shadow = false; }
-  dropdown_menu = { opacity = 1.0; shadow = false; }
+	tooltip = { fade = true; shadow = true; opacity = 1.0; focus = true; full-shadow = false; corner-radius = 4; };
+	dock = { shadow = false; };
+	dnd = { shadow = false; };
+	popup_menu = { opacity = 1.0; shadow = false; corner-radius = 4; };
+	dropdown_menu = { opacity = 1.0; shadow = false; corner-radius = 4; };
 };
+
+#### Shadows
+#######################################################
+
+shadow = false;
+
+shadow-fade = false;
+shadow-opacity = 0.9;
+shadow-radius = 15;
+shadow-offset-x = -15;
+shadow-offset-y = -15;
+# shadow-color = "#000000"
+
+shadow-exclude = [
+	## exclude all windows with no name...
+	"! name~=''",
+	## everyone has this...
+	"name = 'Notification'",
+	"_GTK_FRAME_EXTENTS@:c",
+	## remove multiple shadows...
+	"_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'",
+	## disable shadows for Firefox elements...
+	"class_g = 'firefox' && argb",
+	## no shadow for slop
+	"class_g *?= 'slop'",
+	## no shadow for dwmblocks-windows
+	"class_g *?= 'dbar'",
+	## remove shadow from systray...
+	"class_g * = 'dwm'",
+	"_PICOM_TILE@:32c > 0"
+];
 
 ##### Opacity
 #######################################################
 
-#opacity-rule = [ 
-#	"100:class_g = 'slop'" 
-#];
+opacity-rule = [ 
+	"100:class_g = 'slop'" 
+];
 
 ##### Blur
 #######################################################
 
 blur:
 {
-# kernel or only with --experimental-backends option: gaussian, box 
-  method = "gaussian";
-  size = 10;
-  deviation = 5.0;
+	size = 10;
+	deviation = 5.0;
+	blur-kern = "11x11gaussian";
 };
 
 blur-background-exclude = [
-  "! name~=''",
-#  "class_g * = 'dwm'",
-  "class_g * = 'dwmsys'",
-  "class_g * = 'slop'",
-  "_GTK_FRAME_EXTENTS@:c"
+	"! name~=''",
+	"class_g * = 'dwmsys'",
+	"class_g * = 'slop'",
+	"_GTK_FRAME_EXTENTS@:c"
 ];
 
 ##### Fade
 #######################################################
 
 fading = true;
-fade-delta = 3;
 
-#### Shadows
+fade-in-step = 0.01;
+fade-out-step = 0.01;
+fade-delta = 1;
+
+fade-exclude = [
+	"class_g * = 'dwmprev'",
+]
+
+##### Rounded corners
 #######################################################
 
-shadow = true;
-shadow-fade = false;
-shadow-opacity = 0.9;
-shadow-radius = 15;
-shadow-offset-x = -15;
-shadow-offset-y = -15;
-# shadow-red = 0.12;
-# shadow-green = 0.12;
-# shadow-blue = 0.12;
-
-shadow-exclude = [
-## exclude all windows with no name...
-  "! name~=''",
-## everyone has this...
-  "name = 'Notification'",
-  "_GTK_FRAME_EXTENTS@:c",
-## remove multiple shadows...
-  "_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'",
-## disable shadows for Firefox elements...
-  "class_g = 'firefox' && argb",
-## no shadow for slop
-  "class_g *?= 'slop'",
-## no shadow for dwmblocks-windows
-  "class_g *?= 'dbar'",
-## remove shadow from systray...
-  "class_g * = 'dwm'"
+corner-radius = 5;
+rounded-corners-exclude = [
+	"class_g * = 'dwmsys'",
+	"_PICOM_TILE@:32c = 2",
 ];
+
+round-borders = 1;
+round-borders-exclude = [
+	"class_g * = 'dwmsys'",
+	"_COMPTON_TILE@:32c = 2",
+];
+round-borders-rule = [
+	"1:class_g = 'dwm'",
+	"1:class_g * = 'dwmprev'",
+	"1:name~=''",
+];
+
