--- a/.config/qutebrowser/autoconfig.yml
+++ b/.config/qutebrowser/autoconfig.yml
@@ -21,6 +21,7 @@ settings:
   content.notifications.enabled:
     https://3.solo6.biz: true
     https://awesometoptreats.com: false
+    https://cloudpanel.ionos.de: true
     https://www.hackintosh-forum.de: false
     https://www.reddit.com: false
     https://www.wcostream.com: false
