--- a/.xfiles/themes/colordef.rc
+++ b/.xfiles/themes/colordef.rc
@@ -1,34 +1,34 @@
 gtk-color-scheme =
-"base00:#0b1022
-base01:#2e3242
-base02:#515461
-base03:#747681
-base04:#9699a0
-base05:#b9bbc0
-base06:#dcdddf
+"base00:#000f27
+base01:#243146
+base02:#495465
+base03:#6d7684
+base04:#9298a2
+base05:#b6bac1
+base06:#dbdde0
 base07:#ffffff
-base08:#a29089
-base09:#5b92a5
-base0A:#4d8dc5
-base0B:#5f7bc7
-base0C:#927ed4
-base0D:#9981bd
-base0E:#9f59a7
-base0F:#cb3daa
-base08a:#bc3335
-base09a:#406673
-base0Aa:#2f6696
-base0Ba:#1756d3
-base0Ca:#6746c1
-base0Da:#73549f
-base0Ea:#8f5195
-base0Fa:#bb349c
-base0Ddarker:#6c5f87
-base0Ddarkera:#5D5078
-base0Ddarkeraa:#4E4169
-base0Ddarkeraaa:#352850
-base0Bgrey:#8990c7
-base0Bgreya:#7880b7
-base0Bgreyaa:#666fa7
-base0Bgreyaaa:#535e96
+base08:#ab7854
+base09:#ad8751
+base0A:#9a8a6f
+base0B:#95a978
+base0C:#6fa482
+base0D:#608e88
+base0E:#40828b
+base0F:#2783de
+base08a:#77543c
+base09a:#785e39
+base0Aa:#6f634d
+base0Ba:#55633f
+base0Ca:#4e795c
+base0Da:#42605c
+base0Ea:#38737a
+base0Fa:#165da3
+base0Ddarker:#4d656c
+base0Ddarkera:#3E565D
+base0Ddarkeraa:#2F474E
+base0Ddarkeraaa:#162E35
+base0Bgrey:#959f8d
+base0Bgreya:#848e7e
+base0Bgreyaa:#727d70
+base0Bgreyaaa:#606c61
 "
