--- a/.config/systemd/user/mineport.service
+++ b/.config/systemd/user/mineport.service
@@ -6,7 +6,7 @@ After=network.target
 Type=simple
 Restart=always
 RestartSec=10
-ExecStart=/usr/bin/ssh -o ServerAliveInterval=180 -o ServerAliveCountMax=2 -nNT -R 25565:localhost:25565 root@217.160.214.90
+ExecStart=/usr/bin/autossh -o ServerAliveInterval=180 -o ServerAliveCountMax=2 -nNT -R 25565:localhost:25565 root@217.160.214.90
 
 [Install]
 WantedBy=default.target
