--- a/minecraft/server.properties
+++ b/minecraft/server.properties
@@ -1,18 +1,21 @@
 #Minecraft server properties
-#Tue Nov 09 09:22:30 CET 2021
+#Wed Nov 17 21:26:57 CET 2021
 enable-jmx-monitoring=false
 rcon.port=25575
-enable-command-block=false
+level-seed=
 gamemode=survival
+enable-command-block=false
 enable-query=false
+generator-settings=
 level-name=infinite_onion
 motd=Infinite onion
 query.port=25565
 pvp=true
+generate-structures=true
 difficulty=normal
 network-compression-threshold=512
-max-tick-time=120000
 require-resource-pack=false
+max-tick-time=120000
 max-players=10
 use-native-transport=true
 online-mode=true
@@ -20,8 +23,8 @@ enable-status=true
 allow-flight=false
 broadcast-rcon-to-ops=true
 view-distance=10
-server-ip=
 resource-pack-prompt=
+server-ip=
 allow-nether=true
 server-port=25565
 enable-rcon=false
@@ -32,16 +35,17 @@ resource-pack=
 entity-broadcast-range-percentage=100
 rcon.password=
 player-idle-timeout=0
-debug=false
 force-gamemode=false
+debug=false
 rate-limit=0
 hardcore=false
-white-list=false
+white-list=true
 broadcast-console-to-ops=true
 spawn-npcs=true
 spawn-animals=true
 snooper-enabled=false
 function-permission-level=2
+level-type=default
 text-filtering-config=
 spawn-monsters=true
 enforce-whitelist=false
