--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -2,7 +2,7 @@
 #######################################################
 
 backend = "glx";
-vsync = true
+vsync = true;
 mark-wmwin-focused = true;
 mark-ovredir-focused = true;
 detect-rounded-corners = true;
@@ -96,12 +96,14 @@ fade-exclude = [
 corner-radius = 5;
 rounded-corners-exclude = [
 	"class_g * = 'dwmsys'",
+	"class_i * = 'wallman'",
 	"_PICOM_TILE@:32c = 2",
 ];
 
 round-borders = 1;
 round-borders-exclude = [
 	"class_g * = 'dwmsys'",
+	"class_i * = 'wallman'",
 	"_COMPTON_TILE@:32c = 2",
 ];
 round-borders-rule = [
