--- a/.config/X11/xfiles/themes/colordef.rc
+++ b/.config/X11/xfiles/themes/colordef.rc
@@ -1,34 +1,34 @@
 gtk-color-scheme =
-"base00:#001732
-base01:#243647
-base02:#48555d
-base03:#6c7472
-base04:#919488
-base05:#b5b39d
-base06:#d9d2b3
-base07:#fdf1c8
-base08:#daaa6f
-base09:#dea355
-base0A:#a58e6e
-base0B:#64b078
-base0C:#a9c7b8
-base0D:#5a9f9b
-base0E:#7ec9d0
-base0F:#82b8ca
-base08a:#a06b29
-base09a:#96621d
-base0Aa:#5b4d38
-base0Ba:#32623f
-base0Ca:#5f9278
-base0Da:#2c4e4c
-base0Ea:#378f97
-base0Fa:#3d7b90
-base0Ddarker:#466567
-base0Ddarkera:#375658
-base0Ddarkeraa:#284749
-base0Ddarkeraaa:#0F2E30
-base0Bgrey:#819e7b
-base0Bgreya:#708f71
-base0Bgreyaa:#5d7e67
-base0Bgreyaaa:#4b6e5d
+"base00:#000e27
+base01:#243046
+base02:#495365
+base03:#6d7584
+base04:#9298a2
+base05:#b6bac1
+base06:#dbdde0
+base07:#ffffff
+base08:#ac7c52
+base09:#aa916e
+base0A:#9a8a6f
+base0B:#7f8e70
+base0C:#5a9c87
+base0D:#4f8c8a
+base0E:#4298b0
+base0F:#207ee2
+base08a:#77553a
+base09a:#80694b
+base0Aa:#6f634d
+base0Ba:#58624f
+base0Ca:#3e6b5d
+base0Da:#457a79
+base0Ea:#2e6578
+base0Fa:#206dca
+base0Ddarker:#4b6b73
+base0Ddarkera:#3C5C64
+base0Ddarkeraa:#2D4D55
+base0Ddarkeraaa:#14343C
+base0Bgrey:#90988f
+base0Bgreya:#7f8880
+base0Bgreyaa:#6d7772
+base0Bgreyaaa:#5b6562
 "
