--- a/.config/X11/xfiles/themes/colordef.rc
+++ b/.config/X11/xfiles/themes/colordef.rc
@@ -1,34 +1,34 @@
 gtk-color-scheme =
-"base00:#000e27
-base01:#243046
-base02:#495365
-base03:#6d7584
+"base00:#000f27
+base01:#243146
+base02:#495465
+base03:#6d7684
 base04:#9298a2
 base05:#b6bac1
 base06:#dbdde0
 base07:#ffffff
-base08:#ac7c52
-base09:#aa916e
-base0A:#9a8a6f
-base0B:#7f8e70
-base0C:#5a9c87
-base0D:#4f8c8a
-base0E:#4298b0
-base0F:#207ee2
-base08a:#77553a
-base09a:#80694b
-base0Aa:#6f634d
-base0Ba:#58624f
-base0Ca:#3e6b5d
-base0Da:#457a79
-base0Ea:#2e6578
-base0Fa:#206dca
-base0Ddarker:#4b6b73
-base0Ddarkera:#3C5C64
-base0Ddarkeraa:#2D4D55
-base0Ddarkeraaa:#14343C
-base0Bgrey:#90988f
-base0Bgreya:#7f8880
-base0Bgreyaa:#6d7772
-base0Bgreyaaa:#5b6562
+base08:#ab7a50
+base09:#ac8556
+base0A:#ad8f4f
+base0B:#a2a975
+base0C:#6ca283
+base0D:#638e88
+base0E:#40858b
+base0F:#2783de
+base08a:#775438
+base09a:#7d6144
+base0Aa:#786237
+base0Ba:#5c623d
+base0Ca:#4b765d
+base0Da:#43615d
+base0Ea:#38737a
+base0Fa:#165da3
+base0Ddarker:#4e656c
+base0Ddarkera:#3F565D
+base0Ddarkeraa:#30474E
+base0Ddarkeraaa:#172E35
+base0Bgrey:#9b9f8b
+base0Bgreya:#898e7d
+base0Bgreyaa:#777d6e
+base0Bgreyaaa:#656c5f
 "
