--- a/.config/qt5ct/qt5ct.conf
+++ b/.config/qt5ct/qt5ct.conf
@@ -25,7 +25,7 @@ underline_shortcut=1
 wheel_scroll_lines=5
 
 [QSSEditor]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x2\x35\0\0\0o\0\0\x4\xb9\0\0\x2\x63\0\0\x2\x36\0\0\0p\0\0\x4\xb8\0\0\x2\x62\0\0\0\0\0\0\0\0\x5V\0\0\x2\x36\0\0\0p\0\0\x4\xb8\0\0\x2\x62)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x2\x36\0\0\0p\0\0\x4\xba\0\0\x2\x64\0\0\x2\x37\0\0\0q\0\0\x4\xb9\0\0\x2\x63\0\0\0\0\0\0\0\0\x5V\0\0\x2\x37\0\0\0q\0\0\x4\xb9\0\0\x2\x63)
 
 [SettingsWindow]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\n\0\0\0\x30\0\0\x5K\0\0\x2\xf5\0\0\0\n\0\0\0\x30\0\0\x5K\0\0\x2\xf5\0\0\0\0\0\0\0\0\x5V\0\0\0\n\0\0\0\x30\0\0\x5K\0\0\x2\xf5)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x2\xf1\0\0\0.\0\0\x5Q\0\0\x2\xfb\0\0\x2\xf1\0\0\0.\0\0\x5Q\0\0\x2\xfb\0\0\0\0\0\0\0\0\x5V\0\0\x2\xf1\0\0\0.\0\0\x5Q\0\0\x2\xfb)
