lf stuff, updates

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -95,6 +95,7 @@ set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{25
   ## menus
 bind -n M-m run-shell "tmux-menu"
 bind -n MouseUp1StatusLeft run-shell "tmux-menu"
+#set -g @menus_trigger 'MouseUp1StatusLeft'
 
   ## clear screan
 bind -n C-d send-keys -R C-l \; clear-history
