--- a/minecraft/server.properties
+++ b/minecraft/server.properties
@@ -1,21 +1,23 @@
 #Minecraft server properties
-#Mon Dec 13 22:11:43 CET 2021
+#Sun Dec 18 19:17:43 CET 2022
 enable-jmx-monitoring=false
 rcon.port=25575
 level-seed=
 gamemode=survival
 enable-command-block=false
 enable-query=false
-generator-settings=
-level-name=infinite_onion
+generator-settings={"biome"\:"minecraft\:plains","layers"\:[{"block"\:"minecraft\:bedrock","height"\:1},{"block"\:"minecraft\:gray_concrete","height"\:8},{"block"\:"minecraft\:light_gray_stained_glass","height"\:1}]}
+enforce-secure-profile=true
+level-name=argus_b
 motd=Infinite onion
 query.port=25565
 pvp=true
-generate-structures=true
+generate-structures=false
+max-chained-neighbor-updates=1000000
 difficulty=normal
 network-compression-threshold=512
-require-resource-pack=false
 max-tick-time=120000
+require-resource-pack=false
 max-players=10
 use-native-transport=true
 online-mode=true
@@ -31,8 +33,10 @@ enable-rcon=false
 sync-chunk-writes=true
 op-permission-level=4
 prevent-proxy-connections=false
+hide-online-players=false
 resource-pack=
 entity-broadcast-range-percentage=100
+simulation-distance=10
 rcon.password=
 player-idle-timeout=0
 force-gamemode=false
@@ -42,10 +46,11 @@ hardcore=false
 white-list=true
 broadcast-console-to-ops=true
 spawn-npcs=true
+previews-chat=false
 spawn-animals=true
 snooper-enabled=false
 function-permission-level=2
-level-type=default
+level-type=flat
 text-filtering-config=
 spawn-monsters=true
 enforce-whitelist=false
